objects/Work_Order_Communication__mdt.object
<CustomObject>
    <fields>
        <fullName>Email_Communication__c</fullName>
        <label>Email Communication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Order Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Communication__c</fullName>
        <label>Text Communication</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Work Order Communication</label>
    <pluralLabel>Work Order Communications</pluralLabel>
</CustomObject>